# napp

./: CMakeLists.txt  LICENSE  README.adoc  README.md  nappConfig.cmake.in
.github/workflows/: ci.yml  cmake.yml
doc/examples/: CMakeLists.txt  basic_use.cpp
examples/: CMakeLists.txt  ex1.cpp  test1.cpp
include/: na.hpp
include/napp/: na.hpp
test/: CMakeLists.txt  bug-ftbs-gcc.cpp  lib1.cpp  lib1.hpp  test1.cpp  test_constexpr.cpp  unit-constexpr.cpp  unit-cvref.cpp  unit-function.cpp  unit-lib.cpp  unit-pointer.cpp
